# BlockChain4Fun

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build_linux.sh  build_wins.bat  run_build.bat  run_build.sh
core/: CMakeLists.txt
core/include/: blc4f_block_chain.h  blc4f_blockchain.h  blc4f_transaction.h  blc_block_chain.h
core/src/: blc4f_block_chain.cpp  blc4f_blockchain.cpp  blc4f_transaction.cpp  blc_block_chain.cpp
helper/: CMakeLists.txt
lib/curl-7.57.0-win32/lib/: libcurl.lib
lib/openssl-1.1.0-win32/: openssl-propertiesui-c3038fe3-2890-4cad-a92b-626d363de45c.xml  openssl.targets
main/: CMakeLists.txt
main/src/: main.cpp
test/: CMakelists.txt
